--- a/config/config.local/config.3.3
+++ b/config/config.local/config.3.3
@@ -1,25 +1,23 @@
 {
-    "groups":[1,2,3,4,5,6,7,8,9,10],
-    "local_nid":3,
-    "local_port":8883,
+    "_comments": "nodename is optional, it can be set via API. 
+                    flush option could be: ABANDON, MEM, ASYNC, SYNC",
+    "nodename": "node3",
+    "flush": "ABANDON",
     "nodes":[
     {
-        "nid":1,
-        "groups":[1,2,3,4,5,6,7,8,9,10],
-        "addr":"localhost",
-        "port":8881
+        "name": "node1",
+        "addr": "localhost",
+        "port": 8881
     },
     {
-        "nid":2,
-        "groups":[1,2,3,4,5,6,7,8,9,10],
-        "addr":"localhost",
-        "port":8882
+        "name": "node2",
+        "addr": "localhost",
+        "port": 8882
     },
     {
-        "nid":3,
-        "groups":[1,2,3,4,5,6,7,8,9,10],
-        "addr":"localhost",
-        "port":8883
-    },
+        "name": "node3",
+        "addr": "localhost",
+        "port": 8883
+    }
     ]
 }
