--- a/config/config.local/config.3.2
+++ b/config/config.local/config.3.2
@@ -6,17 +6,17 @@
     "nodes":[
     {
         "name": "node1",
-        "addr": "localhost",
+        "addr": "127.0.0.1",
         "port": 8881
     },
     {
         "name": "node2",
-        "addr": "localhost",
+        "addr": "127.0.0.1",
         "port": 8882
     },
     {
         "name": "node3",
-        "addr": "localhost",
+        "addr": "127.0.0.1",
         "port": 8883
     }
     ]
