--- a/config/config.beaker/config.3.3
+++ b/config/config.beaker/config.3.3
@@ -6,17 +6,17 @@
     "nodes":[
     {
         "name": "node1",
-        "addr": "127.0.0.1",
+        "addr": "beaker-20",
         "port": 8881
     },
     {
         "name": "node2",
-        "addr": "127.0.0.1",
+        "addr": "beaker-21",
         "port": 8882
     },
     {
         "name": "node3",
-        "addr": "127.0.0.1",
+        "addr": "beaker-23",
         "port": 8883
     }
     ]
